<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#fff"
    android:fitsSystemWindows="true"
    tools:context="com.stanleyj.android.myauction.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/wel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:text="@string/welcome_to"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/auction_platform"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/welcome_image" />

        <Button
            android:id="@+id/reg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:background="@drawable/editsat"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/log"
            android:layout_width="300dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"

            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editsat2"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/read_terms_and_condition"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textSize="12sp" />


    </LinearLayout>
</ScrollView>

