<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stanleyj.android.myauction.AddNewAuctionActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Nave"
        app:titleTextColor="#fff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/appbar_padding_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/Product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableLeft="@drawable/ic_border_color_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/product_name"
                    android:inputType="textAutoCorrect|textAutoComplete|textCapSentences"
                    android:maxLines="1"
                    android:textColor="#000"
                    app:met_floatingLabel="normal" />

                <Spinner
                    android:id="@+id/category_spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:backgroundTint="#3e4ba6"
                    android:theme="@style/Nave" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/auctioned_image"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/auctioned_image"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/auctioned_image"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />
            </LinearLayout>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/ic_border_color_black_24dp"
                android:drawablePadding="10dp"
                android:scrollbars="vertical"
                android:hint="@string/product_description_e_g_model_class_color_size_etc"
                android:inputType="textAutoCorrect|textAutoComplete|textCapSentences|textMultiLine"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textColor="#000"
                app:met_floatingLabel="normal" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/minBid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/ic_border_color_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/minimum_bid"
                android:inputType="number"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textColor="#000"
                app:met_floatingLabel="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_date_time"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_date_time"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Start_datePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pick_date"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/End_datePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pick_date"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Start_timePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pick_time"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/End_timePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pick_time"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/appbar_padding_top"
                android:layout_margin="@dimen/appbar_padding_top"
                android:orientation="vertical">

                <Button
                    android:id="@+id/auction"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/back4"
                    android:contentDescription="@string/done"
                    android:drawableRight="@drawable/ic_auction_24dp"
                    android:gravity="center"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/auction"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
