<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stanleyj.android.myauction.AuctionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Nave"
            app:titleTextColor="#fff" />


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/myAuction"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/back4"
                    android:fontFamily="serif"
                    android:text="@string/my_acutions"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/auction_list"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/back4"
                    android:fontFamily="serif"
                    android:text="@string/auction_list"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/winner_list"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/back4"
                    android:fontFamily="serif"
                    android:text="@string/winners_list"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/colorPrimarybar"
        app:itemTextColor="@color/colorPrimary"
        app:menu="@menu/drawermenu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
